argocd/apps/kubernetes-dashboard/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kubernetes-dashboard
  labels:
    name: kubernetes-dashboard
